<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/android_permission_bg"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/lock_icon"/>
            <TextView
                android:textSize="14dp"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_title"/>
            <View
                android:background="#eeeeee"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">
                    <TextView
                        android:textSize="20dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/req_permission_1"/>
                    <TextView
                        android:textSize="16dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/sub_req_permission_1"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/img_permission"/>
                    <View
                        android:background="#eeeeee"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"/>
                    <TextView
                        android:textSize="20dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/req_permission_2"/>
                    <TextView
                        android:textSize="16dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/sub_req_permission_2"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/img_permission2"/>
                    <View
                        android:background="#eeeeee"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"/>
                    <TextView
                        android:textSize="20dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/req_permission_3"/>
                    <TextView
                        android:textSize="16dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/sub_req_permission_3"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/img_permission"/>
                    <View
                        android:background="#eeeeee"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"/>
                    <Button
                        android:layout_gravity="center_vertical"
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_marginRight="60dp"
                        android:layout_marginBottom="30dp"
                        android:text="@string/req_permission_button"
                        android:onClick="onClickPermissionButton"/>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
